# tauri-plugin-mobile-payments

./: Cargo.toml  build.rs  package.json  pnpm-lock.yaml  project_tree.txt
android/: build.gradle.kts
android/src/main/java/: IdentityPlugin.kt  InAppUpdates.kt  MobilePayments.kt  MobilePaymentsPlugin.kt
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: check_for_app_update.toml  complete_flexible_update.toml  get_auth_payload.toml  set_fullscreen.toml  set_update_event_handler.toml  start_app_update.toml  update_subscription.toml
permissions/schemas/: schema.json
src/: commands.rs  error.rs  lib.rs  models.rs
webview-src/: index.ts  rollup.config.js  tsconfig.json
